--- a/public/style/home.css
+++ b/public/style/home.css
@@ -12,6 +12,7 @@
     0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
   padding: 10px;
   text-transform: uppercase;
+  overflow: hidden;
 }
 
 .crt-overlay-effect {
